--- a/2/index.html
+++ b/2/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/Week14/2/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div class="info" onclick="select(this)">При остановке мы можем отлаживать – проанализировать переменные и пошагово пройти по процессу, что поможет отыскать проблему</div>
     <div class="info" onclick="select(this)">При остановке мы можем отлаживать – проанализировать переменные и пошагово пройти по процессу, что поможет отыскать проблему</div>
     <div class="info" onclick="select(this)">При остановке мы можем отлаживать – проанализировать переменные и пошагово пройти по процессу, что поможет отыскать проблему</div>
-    <script src = "/Week14/2/index.js"></script>
+    <script src = "./index.js"></script>
 </body>
 </html>
